--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -110,6 +110,23 @@ h3 {
     margin-bottom: 10px;
 }
 
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    font-size: 120%;
+    color: #e67e22;
+    margin-right: 10px;
+    
+    /*secrets to align texts and icons*/
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -4px;
+    
+    
+}
+
+
 
 
 
@@ -128,6 +145,23 @@ h3 {
     transition: background-color 0.4s, border 0.2s, color 0.2s;
 }
 
+/* ---- LINKS ---- */
+
+a:link,
+a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #e67e22; 
+    transition: border-bottom 0.2s, color 0.2s;
+        
+}
+
+a:hover,
+a:active {
+    color: #555;
+    border-bottom: 1px solid transparent; 
+}
 
 /* ---- BUTTONS ---- */
 .btn-full:link,
@@ -323,9 +357,150 @@ header {
     
 }
 
+.btn-app:link,
+.btn-app:visited {
+    border: 0;
+}
+
 .btn-app img {
     height: 50px;
     width: auto;
     margin-right: 10px;
     
 }
+
+/* ---------------------------------- */
+/* CITIES */
+/* ---------------------------------- */
+
+.box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
+.icon-small {
+    color: #e67e22
+}
+
+/* ---------------------------------- */
+/* TESTIMONIALS */
+/* ---------------------------------- */
+
+.section-testimonials {
+    background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+    
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: -3px;
+    top: -5px;
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+
+/* ---------------------------------- */
+/* SIGN UP */
+/* ---------------------------------- */
+
+.section-plans {
+    background-color: #f4f4f4;
+}
+
+.plan-box {
+    background-color: #fff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+    box-shadow: 0 2px 2px #efefef;
+}
+
+
+.plan-box div:first-child {
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.plan-box div:last-child {
+    text-align: center;
+    border: none;
+}
+
+.plan-box div {
+    
+    padding: 15px;
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.plan-price {
+    font-size: 300%;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: #e67e22;
+    
+}
+
+.plan-price-meal{
+    font-size: 80%;
+    
+}
+
+.plan-price span {
+    font-size: 30%;
+    font-weight: 300;
+    
+}
+
+.plan-box ul {
+    list-style: none;
+}
+
+.plan-box ul li {
+    padding: 5px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
